# freeradius-mongodb

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  all.mk.in  configure.ac  rlm_mongodb.c  rlm_mongodb_ops.c
cmake/modules/: FindLibfreeradius3.cmake  FindLibmongoc.cmake
